--- a/index_backup1.html
+++ b/index_backup1.html
@@ -1116,7 +1116,16 @@
              <li data-ev="5.9391"><span class="bigfont1" aria-label="ionization energy 5 . 9 3 9 1">5.9391</span></li> 
           </ul>
       </td>
-      <td>Row 8, Cell 13</td>
+       <td id="holmium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="67"><span class="bigfont1" aria-label="atomic number 67">67</span></li>
+             <li data-symbol="H o" aria-label="atomic symbol H o" class="bigfont2">H<span class="letter-tight">o</span></li>
+             <li data-element="dysprosium"><span class="bigfont1" aria-label="element">Dysprosium</span></li>
+             <li data-weight="164.93"><span class="bigfont1" aria-label="standard atomic weight 164 . 9 3">164.93</span></li>
+             <li data-groundstate="dysprosium"><span class="bigfont1" aria-label="ground [Xe]4f 11 6s 2">[Xe]4f<sup>11</sup>6s<sup>2</sup><span></li>
+             <li data-ev="6.0215"><span class="bigfont1" aria-label="ionization energy 6 . 0 2 1 5">6.0215</span></li> 
+          </ul>
+      </td>
       <td>Row 8, Cell 14</td>
       <td>Row 8, Cell 15</td>
       <td>Row 8, Cell 16</td>
