--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,16 @@
              <li data-ev="6.0215"><span class="bigfont1" aria-label="ionization energy 6 . 0 2 1 5">6.0215</span></li> 
           </ul>
       </td>
-      <td>Row 8, Cell 14</td>
+        <td id="erbium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="68"><span class="bigfont1" aria-label="atomic number 68">68</span></li>
+             <li data-symbol="E r" aria-label="atomic symbol E r" class="bigfont2">E<span class="letter-tight">r</span></li>
+             <li data-element="erbium"><span class="bigfont1" aria-label="element">Erbium</span></li>
+             <li data-weight="167.26"><span class="bigfont1" aria-label="standard atomic weight 167 . 2 6">167.26</span></li>
+             <li data-groundstate="erbium"><span class="bigfont1" aria-label="ground [Xe]4f 12 6s 2">[Xe]4f<sup>12</sup>6s<sup>2</sup><span></li>
+             <li data-ev="6.1077"><span class="bigfont1" aria-label="ionization energy 6  . 1 0 7 7">6.1077</span></li> 
+          </ul>
+      </td>
       <td>Row 8, Cell 15</td>
       <td>Row 8, Cell 16</td>
       <td>Row 8, Cell 17</td>
