--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@
              <li data-ev="6.0215"><span class="bigfont1" aria-label="ionization energy 6 . 0 2 1 5">6.0215</span></li> 
           </ul>
       </td>
-        <td id="erbium" class="solids" tabindex="0">
+      <td id="erbium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="68"><span class="bigfont1" aria-label="atomic number 68">68</span></li>
              <li data-symbol="E r" aria-label="atomic symbol E r" class="bigfont2">E<span class="letter-tight">r</span></li>
@@ -1136,7 +1136,16 @@
              <li data-ev="6.1077"><span class="bigfont1" aria-label="ionization energy 6  . 1 0 7 7">6.1077</span></li> 
           </ul>
       </td>
-      <td>Row 8, Cell 15</td>
+       <td id="thulium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="69"><span class="bigfont1" aria-label="atomic number 69">69</span></li>
+             <li data-symbol="T m" aria-label="atomic symbol T m" class="bigfont2">T<span class="letter-tight">m</span></li>
+             <li data-element="thulium"><span class="bigfont1" aria-label="element">Thulium</span></li>
+             <li data-weight="168.93"><span class="bigfont1" aria-label="standard atomic weight 168 . 9 3">168.93</span></li>
+             <li data-groundstate="thulium"><span class="bigfont1" aria-label="ground [Xe]4f 13 6s 2">[Xe]4f<sup>13</sup>6s<sup>2</sup><span></li>
+             <li data-ev="6.1843"><span class="bigfont1" aria-label="ionization energy 6 . 1 8 4 3">6.1843</span></li> 
+          </ul>
+      </td>
       <td>Row 8, Cell 16</td>
       <td>Row 8, Cell 17</td>
       <td>Row 8, Cell 18</td>
