--- a/index_backup1.html
+++ b/index_backup1.html
@@ -1126,8 +1126,26 @@
              <li data-ev="6.0215"><span class="bigfont1" aria-label="ionization energy 6 . 0 2 1 5">6.0215</span></li> 
           </ul>
       </td>
-      <td>Row 8, Cell 14</td>
-      <td>Row 8, Cell 15</td>
+      <td id="erbium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="68"><span class="bigfont1" aria-label="atomic number 68">68</span></li>
+             <li data-symbol="E r" aria-label="atomic symbol E r" class="bigfont2">E<span class="letter-tight">r</span></li>
+             <li data-element="erbium"><span class="bigfont1" aria-label="element">Erbium</span></li>
+             <li data-weight="167.26"><span class="bigfont1" aria-label="standard atomic weight 167 . 2 6">167.26</span></li>
+             <li data-groundstate="erbium"><span class="bigfont1" aria-label="ground [Xe]4f 12 6s 2">[Xe]4f<sup>12</sup>6s<sup>2</sup><span></li>
+             <li data-ev="6.1077"><span class="bigfont1" aria-label="ionization energy 6  . 1 0 7 7">6.1077</span></li> 
+          </ul>
+      </td>
+       <td id="thulium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="69"><span class="bigfont1" aria-label="atomic number 69">69</span></li>
+             <li data-symbol="T m" aria-label="atomic symbol T m" class="bigfont2">T<span class="letter-tight">m</span></li>
+             <li data-element="thulium"><span class="bigfont1" aria-label="element">Thulium</span></li>
+             <li data-weight="168.93"><span class="bigfont1" aria-label="standard atomic weight 168 . 9 3">168.93</span></li>
+             <li data-groundstate="thulium"><span class="bigfont1" aria-label="ground [Xe]4f 13 6s 2">[Xe]4f<sup>13</sup>6s<sup>2</sup><span></li>
+             <li data-ev="6.1843"><span class="bigfont1" aria-label="ionization energy 6 . 1 8 4 3">6.1843</span></li> 
+          </ul>
+      </td>
       <td>Row 8, Cell 16</td>
       <td>Row 8, Cell 17</td>
       <td>Row 8, Cell 18</td>
@@ -1160,7 +1178,7 @@
     <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
-        Content: 3 January 2020<br />
+        Content: 9 January 2020<br />
         WebAim: 2 December 2019 0<br />
         NuHTML: 2 December 2019 multiple aria-label warnings (expected, in this case)<br />
         Note:aria-label used to over-ride screen reader mispronunciations of atomic weights<br />
