--- a/index.html
+++ b/index.html
@@ -1136,7 +1136,7 @@
              <li data-ev="6.1077"><span class="bigfont1" aria-label="ionization energy 6  . 1 0 7 7">6.1077</span></li> 
           </ul>
       </td>
-       <td id="thulium" class="solids" tabindex="0">
+      <td id="thulium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="69"><span class="bigfont1" aria-label="atomic number 69">69</span></li>
              <li data-symbol="T m" aria-label="atomic symbol T m" class="bigfont2">T<span class="letter-tight">m</span></li>
@@ -1145,8 +1145,17 @@
              <li data-groundstate="thulium"><span class="bigfont1" aria-label="ground [Xe]4f 13 6s 2">[Xe]4f<sup>13</sup>6s<sup>2</sup><span></li>
              <li data-ev="6.1843"><span class="bigfont1" aria-label="ionization energy 6 . 1 8 4 3">6.1843</span></li> 
           </ul>
+         </td>
+         <td id="ytterbium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="70"><span class="bigfont1" aria-label="atomic number 70">70</span></li>
+             <li data-symbol="Y b" aria-label="atomic symbol Y b" class="bigfont2">Y<span class="letter-tight">b</span></li>
+             <li data-element="ytterbium"><span class="bigfont1" aria-label="element">Ytterbium</span></li>
+             <li data-weight="173.05"><span class="bigfont1" aria-label="standard atomic weight 173 . 0 5">173.05</span></li>
+             <li data-groundstate="ytterbium"><span class="bigfont1" aria-label="ground [Xe]4f 14 6s 2[Xe]4f<sup>14</sup>6s<sup>2</sup><span></li>
+             <li data-ev="6.2542"><span class="bigfont1" aria-label="ionization energy 6 . 2 5 4 2">6.2542</span></li> 
+          </ul>
       </td>
-      <td>Row 8, Cell 16</td>
       <td>Row 8, Cell 17</td>
       <td>Row 8, Cell 18</td>
     </tr>
