--- a/index.html
+++ b/index.html
@@ -1161,10 +1161,10 @@
       <td id="lutetium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="71"><span class="bigfont1" aria-label="atomic number 71">71</span></li>
-             <li data-symbol="Y b" aria-label="atomic symbol Y b" class="bigfont2">Y<span class="letter-tight">b</span></li>
+             <li data-symbol="L u" aria-label="atomic symbol L u" class="bigfont2">L<span class="letter-tight">u</span></li>
              <li data-element="lutetium"><span class="bigfont1" aria-label="element">Lutetium</span></li>
-             <li data-weight="173.05"><span class="bigfont1" aria-label="standard atomic weight 173 . 0 5">173.05</span></li>
-             <li data-groundstate="ytterbium"><span class="bigfont1" aria-label="ground [Xe]4f 14 6s 2[Xe]4f<sup>14</sup>6s<sup>2</sup><span></li>
+             <li data-weight="174.97"><span class="bigfont1" aria-label="standard atomic weight 174 . 9 7">174.97</span></li>
+             <li data-groundstate="lutetium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5d 6s 2[Xe]4f<sup>14</sup>5d6s<sup>2</sup><span></li>
              <li data-ev="6.2542"><span class="bigfont1" aria-label="ionization energy 6 . 2 5 4 2">6.2542</span></li> 
           </ul>
       </td>
