--- a/index_backup1.html
+++ b/index_backup1.html
@@ -1016,6 +1016,7 @@
     <tr style="margin-top:50px;">
       <td class="hidden">Row 8, Cell 1</td>
       <td class="hidden">Row 8, Cell 2</td>
+      <td class="hidden">Row 6, Cell 3</td>
       <td id="lanthanum" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="57"><span class="bigfont1" aria-label="atomic number 57">57</span></li>
@@ -1136,7 +1137,7 @@
              <li data-ev="6.1077"><span class="bigfont1" aria-label="ionization energy 6  . 1 0 7 7">6.1077</span></li> 
           </ul>
       </td>
-       <td id="thulium" class="solids" tabindex="0">
+      <td id="thulium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="69"><span class="bigfont1" aria-label="atomic number 69">69</span></li>
              <li data-symbol="T m" aria-label="atomic symbol T m" class="bigfont2">T<span class="letter-tight">m</span></li>
@@ -1145,10 +1146,28 @@
              <li data-groundstate="thulium"><span class="bigfont1" aria-label="ground [Xe]4f 13 6s 2">[Xe]4f<sup>13</sup>6s<sup>2</sup><span></li>
              <li data-ev="6.1843"><span class="bigfont1" aria-label="ionization energy 6 . 1 8 4 3">6.1843</span></li> 
           </ul>
+         </td>
+         <td id="ytterbium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="70"><span class="bigfont1" aria-label="atomic number 70">70</span></li>
+             <li data-symbol="Y b" aria-label="atomic symbol Y b" class="bigfont2">Y<span class="letter-tight">b</span></li>
+             <li data-element="ytterbium"><span class="bigfont1" aria-label="element">Ytterbium</span></li>
+             <li data-weight="173.05"><span class="bigfont1" aria-label="standard atomic weight 173 . 0 5">173.05</span></li>
+             <li data-groundstate="ytterbium"><span class="bigfont1" aria-label="ground [Xe]4f 14 6s 2[Xe]4f<sup>14</sup>6s<sup>2</sup><span></li>
+             <li data-ev="5.4259"><span class="bigfont1" aria-label="ionization energy 5 . 4 2 5 9">5.4259</span></li> 
+          </ul>
       </td>
-      <td>Row 8, Cell 16</td>
-      <td>Row 8, Cell 17</td>
-      <td>Row 8, Cell 18</td>
+               
+      <td id="lutetium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="71"><span class="bigfont1" aria-label="atomic number 71">71</span></li>
+             <li data-symbol="L u" aria-label="atomic symbol L u" class="bigfont2">L<span class="letter-tight">u</span></li>
+             <li data-element="lutetium"><span class="bigfont1" aria-label="element">Lutetium</span></li>
+             <li data-weight="174.97"><span class="bigfont1" aria-label="standard atomic weight 174 . 9 7">174.97</span></li>
+             <li data-groundstate="lutetium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5d 6s 2[Xe]4f<sup>14</sup>5d6s<sup>2</sup><span></li>
+             <li data-ev="6.2542"><span class="bigfont1" aria-label="ionization energy 6 . 2 5 4 2">6.2542</span></li> 
+          </ul>
+      </td>
     </tr>
     <tr>
       <td class="hidden">Row 9, Cell 1</td>
@@ -1178,7 +1197,7 @@
     <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
-        Content: 9 January 2020<br />
+        Content: 24 January 2020<br />
         WebAim: 2 December 2019 0<br />
         NuHTML: 2 December 2019 multiple aria-label warnings (expected, in this case)<br />
         Note:aria-label used to over-ride screen reader mispronunciations of atomic weights<br />
