--- a/index.html
+++ b/index.html
@@ -1156,8 +1156,7 @@
              <li data-groundstate="ytterbium"><span class="bigfont1" aria-label="ground [Xe]4f 14 6s 2[Xe]4f<sup>14</sup>6s<sup>2</sup><span></li>
              <li data-ev="5.4259"><span class="bigfont1" aria-label="ionization energy 5 . 4 2 5 9">5.4259</span></li> 
           </ul>
-      </td>
-               
+      </td>         
       <td id="lutetium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="71"><span class="bigfont1" aria-label="atomic number 71">71</span></li>
@@ -1165,14 +1164,14 @@
              <li data-element="lutetium"><span class="bigfont1" aria-label="element">Lutetium</span></li>
              <li data-weight="174.97"><span class="bigfont1" aria-label="standard atomic weight 174 . 9 7">174.97</span></li>
              <li data-groundstate="lutetium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5d 6s 2[Xe]4f<sup>14</sup>5d6s<sup>2</sup><span></li>
-             <li data-ev="6.2542"><span class="bigfont1" aria-label="ionization energy 6 . 2 5 4 2">6.2542</span></li> 
+             <li data-ev="5.4259"><span class="bigfont1" aria-label="ionization energy 5 . 4 2 5 9">5.4259</span></li> 
           </ul>
       </td>
     </tr>
     <tr>
       <td class="hidden">Row 9, Cell 1</td>
       <td class="hidden">Row 9, Cell 2</td>
-      <td>Row 9, Cell 3</td>
+      <td class="hidden">Row 9, Cell 3</td>
       <td>Row 9, Cell 4</td>
       <td>Row 9, Cell 5</td>
       <td>Row 9, Cell 6</td>
