--- a/index.html
+++ b/index.html
@@ -1153,8 +1153,8 @@
              <li data-symbol="Y b" aria-label="atomic symbol Y b" class="bigfont2">Y<span class="letter-tight">b</span></li>
              <li data-element="ytterbium"><span class="bigfont1" aria-label="element">Ytterbium</span></li>
              <li data-weight="173.05"><span class="bigfont1" aria-label="standard atomic weight 173 . 0 5">173.05</span></li>
-             <li data-groundstate="ytterbium"><span class="bigfont1" aria-label="ground [Xe]4f 14 6s 2[Xe]4f<sup>14</sup>6s<sup>2</sup><span></li>
-             <li data-ev="5.4259"><span class="bigfont1" aria-label="ionization energy 5 . 4 2 5 9">5.4259</span></li> 
+             <li data-groundstate="ytterbium"><span class="bigfont1" aria-label="ground [Xe]4f 14 6s 2">[Xe]4f<sup>14</sup>6s<sup>2</sup><span></li>
+             <li data-ev="6.2542"><span class="bigfont1" aria-label="ionization energy 6 . 2 5 4 2">6.2542</span></li> 
           </ul>
       </td>         
       <td id="lutetium" class="solids" tabindex="0">
@@ -1163,7 +1163,7 @@
              <li data-symbol="L u" aria-label="atomic symbol L u" class="bigfont2">L<span class="letter-tight">u</span></li>
              <li data-element="lutetium"><span class="bigfont1" aria-label="element">Lutetium</span></li>
              <li data-weight="174.97"><span class="bigfont1" aria-label="standard atomic weight 174 . 9 7">174.97</span></li>
-             <li data-groundstate="lutetium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5d 6s 2[Xe]4f<sup>14</sup>5d6s<sup>2</sup><span></li>
+             <li data-groundstate="lutetium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5d 6s 2">[Xe]4f<sup>14</sup>5d6s<sup>2</sup><span></li>
              <li data-ev="5.4259"><span class="bigfont1" aria-label="ionization energy 5 . 4 2 5 9">5.4259</span></li> 
           </ul>
       </td>
