--- a/index.html
+++ b/index.html
@@ -1186,12 +1186,12 @@
       <td>Row 9, Cell 15</td>
       <td>Row 9, Cell 16</td>
       <td>Row 9, Cell 17</td>
-      <td id="lawrencium" class="solids" tabindex="0">
+      <td id="lawrencium" class="artificial" tabindex="0">
             <ul>
-             <li data-atomicnumber="71"><span class="bigfont1" aria-label="atomic number 71">71</span></li>
-             <li data-symbol="L u" aria-label="atomic symbol L u" class="bigfont2">L<span class="letter-tight">u</span></li>
+             <li data-atomicnumber="103"><span class="bigfont1" aria-label="atomic number 103">103</span></li>
+             <li data-symbol="L r" aria-label="atomic symbol L r" class="bigfont2">L<span class="letter-tight">r</span></li>
              <li data-element="lawrencium"><span class="bigfont1" aria-label="element">lawrencium</span></li>
-             <li data-weight="174.97"><span class="bigfont1" aria-label="standard atomic weight 174 . 9 7">174.97</span></li>
+             <li data-weight="266"><span class="bigfont1" aria-label="standard atomic weight ( 266 )">(266)</span></li>
              <li data-groundstate="lutetium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5d 6s 2">[Xe]4f<sup>14</sup>5d6s<sup>2</sup><span></li>
              <li data-ev="5.4259"><span class="bigfont1" aria-label="ionization energy 5 . 4 2 5 9">5.4259</span></li> 
           </ul>
