--- a/index.html
+++ b/index.html
@@ -1192,7 +1192,7 @@
              <li data-symbol="L r" aria-label="atomic symbol L r" class="bigfont2">L<span class="letter-tight">r</span></li>
              <li data-element="lawrencium"><span class="bigfont1" aria-label="element">lawrencium</span></li>
              <li data-weight="266"><span class="bigfont1" aria-label="standard atomic weight ( 266 )">(266)</span></li>
-             <li data-groundstate="lutetium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5d 6s 2">[Xe]4f<sup>14</sup>5d6s<sup>2</sup><span></li>
+             <li data-groundstate="lutetium"><span class="bigfont1" aria-label="ground [Rn]5f14 7s2 7p">[Rn]5f<sup>14</sup>7s<sup>2</sup>7p<span></li>
              <li data-ev="5.4259"><span class="bigfont1" aria-label="ionization energy 5 . 4 2 5 9">5.4259</span></li> 
           </ul>
       </td>
