--- a/index_backup1.html
+++ b/index_backup1.html
@@ -1153,26 +1153,25 @@
              <li data-symbol="Y b" aria-label="atomic symbol Y b" class="bigfont2">Y<span class="letter-tight">b</span></li>
              <li data-element="ytterbium"><span class="bigfont1" aria-label="element">Ytterbium</span></li>
              <li data-weight="173.05"><span class="bigfont1" aria-label="standard atomic weight 173 . 0 5">173.05</span></li>
-             <li data-groundstate="ytterbium"><span class="bigfont1" aria-label="ground [Xe]4f 14 6s 2[Xe]4f<sup>14</sup>6s<sup>2</sup><span></li>
-             <li data-ev="5.4259"><span class="bigfont1" aria-label="ionization energy 5 . 4 2 5 9">5.4259</span></li> 
+             <li data-groundstate="ytterbium"><span class="bigfont1" aria-label="ground [Xe]4f 14 6s 2">[Xe]4f<sup>14</sup>6s<sup>2</sup><span></li>
+             <li data-ev="6.2542"><span class="bigfont1" aria-label="ionization energy 6 . 2 5 4 2">6.2542</span></li> 
           </ul>
-      </td>
-               
+      </td>         
       <td id="lutetium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="71"><span class="bigfont1" aria-label="atomic number 71">71</span></li>
              <li data-symbol="L u" aria-label="atomic symbol L u" class="bigfont2">L<span class="letter-tight">u</span></li>
              <li data-element="lutetium"><span class="bigfont1" aria-label="element">Lutetium</span></li>
              <li data-weight="174.97"><span class="bigfont1" aria-label="standard atomic weight 174 . 9 7">174.97</span></li>
-             <li data-groundstate="lutetium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5d 6s 2[Xe]4f<sup>14</sup>5d6s<sup>2</sup><span></li>
-             <li data-ev="6.2542"><span class="bigfont1" aria-label="ionization energy 6 . 2 5 4 2">6.2542</span></li> 
+             <li data-groundstate="lutetium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5d 6s 2">[Xe]4f<sup>14</sup>5d6s<sup>2</sup><span></li>
+             <li data-ev="5.4259"><span class="bigfont1" aria-label="ionization energy 5 . 4 2 5 9">5.4259</span></li> 
           </ul>
       </td>
     </tr>
     <tr>
       <td class="hidden">Row 9, Cell 1</td>
       <td class="hidden">Row 9, Cell 2</td>
-      <td>Row 9, Cell 3</td>
+      <td class="hidden">Row 9, Cell 3</td>
       <td>Row 9, Cell 4</td>
       <td>Row 9, Cell 5</td>
       <td>Row 9, Cell 6</td>
@@ -1187,14 +1186,24 @@
       <td>Row 9, Cell 15</td>
       <td>Row 9, Cell 16</td>
       <td>Row 9, Cell 17</td>
-      <td>Row 9, Cell 18</td>
+      <td id="lawrencium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="103"><span class="bigfont1" aria-label="atomic number 103">103</span></li>
+             <li data-symbol="L r" aria-label="atomic symbol L r" class="bigfont2">L<span class="letter-tight">r</span></li>
+             <li data-element="lawrencium"><span class="bigfont1" aria-label="element">lawrencium</span></li>
+             <li data-weight="266"><span class="bigfont1" aria-label="standard atomic weight ( 266 )">(266)</span></li>
+             <li data-groundstate="lutetium"><span class="bigfont1" aria-label="ground [Rn]5f14 7s2 7p">[Rn]5f<sup>14</sup>7s<sup>2</sup>7p<span></li>
+             <li data-ev="4.96"><span class="bigfont1" aria-label="ionization energy 4 . 9 6">4.96</span></li> 
+          </ul>
+      </td>
+    </tr>
     </tr>
   </tbody>
 </table>
 </div>
     
   </main>
-    <footer>
+  <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
         Content: 24 January 2020<br />
