--- a/index.html
+++ b/index.html
@@ -1185,7 +1185,16 @@
       <td>Row 9, Cell 14</td>
       <td>Row 9, Cell 15</td>
       <td>Row 9, Cell 16</td>
-      <td>Row 9, Cell 17</td>
+      <td id="lawrencium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="103"><span class="bigfont1" aria-label="atomic number 103">103</span></li>
+             <li data-symbol="L r" aria-label="atomic symbol L r" class="bigfont2">L<span class="letter-tight">r</span></li>
+             <li data-element="lawrencium"><span class="bigfont1" aria-label="element">lawrencium</span></li>
+             <li data-weight="266"><span class="bigfont1" aria-label="standard atomic weight ( 266 )">(266)</span></li>
+             <li data-groundstate="lutetium"><span class="bigfont1" aria-label="ground [Rn]5f14 7s2 7p">[Rn]5f<sup>14</sup>7s<sup>2</sup>7p<span></li>
+             <li data-ev="4.96"><span class="bigfont1" aria-label="ionization energy 4 . 9 6">4.96</span></li> 
+          </ul>
+      </td>
       <td id="lawrencium" class="artificial" tabindex="0">
             <ul>
              <li data-atomicnumber="103"><span class="bigfont1" aria-label="atomic number 103">103</span></li>
