--- a/index.html
+++ b/index.html
@@ -1184,7 +1184,16 @@
       <td>Row 9, Cell 13</td>
       <td>Row 9, Cell 14</td>
       <td>Row 9, Cell 15</td>
-      <td>Row 9, Cell 16</td>
+      <td id="nobelium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="102"><span class="bigfont1" aria-label="atomic number 102">102</span></li>
+             <li data-symbol="N o" aria-label="atomic symbol N o" class="bigfont2">N<span class="letter-tight">o</span></li>
+             <li data-element="nobelium"><span class="bigfont1" aria-label="element">Nobelium</span></li>
+             <li data-weight="259"><span class="bigfont1" aria-label="standard atomic weight ( 259 )">(259)</span></li>
+             <li data-groundstate="nobelium"><span class="bigfont1" aria-label="ground [Rn]5f14 7s2">[Rn]5f<sup>14</sup>7s<sup>2</sup><span></li>
+             <li data-ev="6 . 6 6"><span class="bigfont1" aria-label="ionization energy 6 . 6 6">6.66</span></li> 
+          </ul>
+      </td>
       <td id="nobelium" class="artificial" tabindex="0">
             <ul>
              <li data-atomicnumber="102"><span class="bigfont1" aria-label="atomic number 102">102</span></li>
