--- a/index_backup1.html
+++ b/index_backup1.html
@@ -1184,15 +1184,33 @@
       <td>Row 9, Cell 13</td>
       <td>Row 9, Cell 14</td>
       <td>Row 9, Cell 15</td>
-      <td>Row 9, Cell 16</td>
-      <td>Row 9, Cell 17</td>
+      <td id="mendelevium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="101"><span class="bigfont1" aria-label="atomic number 101">101</span></li>
+             <li data-symbol="M d" aria-label="atomic symbol M d" class="bigfont2">M<span class="letter-tight">d</span></li>
+             <li data-element="mendelevium"><span class="bigfont1" aria-label="element">Mendelevium</span></li>
+             <li data-weight="258"><span class="bigfont1" aria-label="standard atomic weight ( 258 )">(258)</span></li>
+             <li data-groundstate="mendelevium"><span class="bigfont1" aria-label="ground [Rn]5f 13 7s2">[Rn]5f<sup>13</sup>7s<sup>2</sup><span></li>
+             <li data-ev="6.58"><span class="bigfont1" aria-label="ionization energy 6 . 5 8">6.58</span></li> 
+          </ul>
+      </td>
+      <td id="nobelium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="102"><span class="bigfont1" aria-label="atomic number 102">102</span></li>
+             <li data-symbol="N o" aria-label="atomic symbol N o" class="bigfont2">N<span class="letter-tight">o</span></li>
+             <li data-element="nobelium"><span class="bigfont1" aria-label="element">Nobelium</span></li>
+             <li data-weight="259"><span class="bigfont1" aria-label="standard atomic weight ( 259 )">(259)</span></li>
+             <li data-groundstate="nobelium"><span class="bigfont1" aria-label="ground [Rn]5f14 7s2">[Rn]5f<sup>14</sup>7s<sup>2</sup><span></li>
+             <li data-ev="6 . 6 6"><span class="bigfont1" aria-label="ionization energy 6 . 6 6">6.66</span></li> 
+          </ul>
+      </td>
       <td id="lawrencium" class="artificial" tabindex="0">
             <ul>
              <li data-atomicnumber="103"><span class="bigfont1" aria-label="atomic number 103">103</span></li>
              <li data-symbol="L r" aria-label="atomic symbol L r" class="bigfont2">L<span class="letter-tight">r</span></li>
              <li data-element="lawrencium"><span class="bigfont1" aria-label="element">lawrencium</span></li>
              <li data-weight="266"><span class="bigfont1" aria-label="standard atomic weight ( 266 )">(266)</span></li>
-             <li data-groundstate="lutetium"><span class="bigfont1" aria-label="ground [Rn]5f14 7s2 7p">[Rn]5f<sup>14</sup>7s<sup>2</sup>7p<span></li>
+             <li data-groundstate="lawrencium"><span class="bigfont1" aria-label="ground [Rn]5f14 7s2 7p">[Rn]5f<sup>14</sup>7s<sup>2</sup>7p<span></li>
              <li data-ev="4.96"><span class="bigfont1" aria-label="ionization energy 4 . 9 6">4.96</span></li> 
           </ul>
       </td>
