--- a/index.html
+++ b/index.html
@@ -1183,13 +1183,13 @@
       <td>Row 9, Cell 12</td>
       <td>Row 9, Cell 13</td>
       <td>Row 9, Cell 14</td>
-      <td id="mendelevium" class="artificial" tabindex="0">
+      <td id="fermium" class="artificial" tabindex="0">
             <ul>
              <li data-atomicnumber="100"><span class="bigfont1" aria-label="atomic number 100">100</span></li>
              <li data-symbol="M d" aria-label="atomic symbol M d" class="bigfont2">M<span class="letter-tight">d</span></li>
-             <li data-element="mendelevium"><span class="bigfont1" aria-label="element">Mendelevium</span></li>
+             <li data-element="fermium"><span class="bigfont1" aria-label="element">Fermium</span></li>
              <li data-weight="258"><span class="bigfont1" aria-label="standard atomic weight ( 258 )">(258)</span></li>
-             <li data-groundstate="mendelevium"><span class="bigfont1" aria-label="ground [Rn]5f 13 7s2">[Rn]5f<sup>13</sup>7s<sup>2</sup><span></li>
+             <li data-groundstate="fermium"><span class="bigfont1" aria-label="ground [Rn]5f 13 7s2">[Rn]5f<sup>13</sup>7s<sup>2</sup><span></li>
              <li data-ev="6.58"><span class="bigfont1" aria-label="ionization energy 6 . 5 8">6.58</span></li> 
           </ul>
       </td>
