--- a/index.html
+++ b/index.html
@@ -1186,7 +1186,7 @@
       <td id="fermium" class="artificial" tabindex="0">
             <ul>
              <li data-atomicnumber="100"><span class="bigfont1" aria-label="atomic number 100">100</span></li>
-             <li data-symbol="M d" aria-label="atomic symbol M d" class="bigfont2">M<span class="letter-tight">d</span></li>
+             <li data-symbol="F m" aria-label="atomic symbol F m" class="bigfont2">F<span class="letter-tight">m</span></li>
              <li data-element="fermium"><span class="bigfont1" aria-label="element">Fermium</span></li>
              <li data-weight="257"><span class="bigfont1" aria-label="standard atomic weight ( 257 )">(257)</span></li>
              <li data-groundstate="fermium"><span class="bigfont1" aria-label="ground [Rn]5f 12 7s2">[Rn]5f<sup>12</sup>7s<sup>2</sup><span></li>
