--- a/index_backup2.html
+++ b/index_backup2.html
@@ -1183,8 +1183,26 @@
       <td>Row 9, Cell 12</td>
       <td>Row 9, Cell 13</td>
       <td>Row 9, Cell 14</td>
-      <td>Row 9, Cell 15</td>
-      <td>Row 9, Cell 16</td>
+      <td id="fermium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="100"><span class="bigfont1" aria-label="atomic number 100">100</span></li>
+             <li data-symbol="F m" aria-label="atomic symbol F m" class="bigfont2">F<span class="letter-tight">m</span></li>
+             <li data-element="fermium"><span class="bigfont1" aria-label="element">Fermium</span></li>
+             <li data-weight="257"><span class="bigfont1" aria-label="standard atomic weight ( 257 )">(257)</span></li>
+             <li data-groundstate="fermium"><span class="bigfont1" aria-label="ground [Rn]5f 12 7s2">[Rn]5f<sup>12</sup>7s<sup>2</sup><span></li>
+             <li data-ev="6.50"><span class="bigfont1" aria-label="ionization energy 6 . 5 0">6.50</span></li> 
+          </ul>
+      </td>
+      <td id="mendelevium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="101"><span class="bigfont1" aria-label="atomic number 101">101</span></li>
+             <li data-symbol="M d" aria-label="atomic symbol M d" class="bigfont2">M<span class="letter-tight">d</span></li>
+             <li data-element="mendelevium"><span class="bigfont1" aria-label="element">Mendelevium</span></li>
+             <li data-weight="258"><span class="bigfont1" aria-label="standard atomic weight ( 258 )">(258)</span></li>
+             <li data-groundstate="mendelevium"><span class="bigfont1" aria-label="ground [Rn]5f 13 7s2">[Rn]5f<sup>13</sup>7s<sup>2</sup><span></li>
+             <li data-ev="6.58"><span class="bigfont1" aria-label="ionization energy 6 . 5 8">6.58</span></li> 
+          </ul>
+      </td>
       <td id="nobelium" class="artificial" tabindex="0">
             <ul>
              <li data-atomicnumber="102"><span class="bigfont1" aria-label="atomic number 102">102</span></li>
@@ -1215,7 +1233,7 @@
   <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
-        Content: 24 January 2020<br />
+        Content: 27 January 2020<br />
         WebAim: 2 December 2019 0<br />
         NuHTML: 2 December 2019 multiple aria-label warnings (expected, in this case)<br />
         Note:aria-label used to over-ride screen reader mispronunciations of atomic weights<br />
