--- a/index_backup1.html
+++ b/index_backup1.html
@@ -1182,8 +1182,26 @@
       <td>Row 9, Cell 11</td>
       <td>Row 9, Cell 12</td>
       <td>Row 9, Cell 13</td>
-      <td>Row 9, Cell 14</td>
-      <td>Row 9, Cell 15</td>
+      <td id="einsteinium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="99"><span class="bigfont1" aria-label="atomic number 99">99</span></li>
+             <li data-symbol="E s" aria-label="atomic symbol E s" class="bigfont2">E<span class="letter-tight">s</span></li>
+             <li data-element="einsteinium"><span class="bigfont1" aria-label="element">Einsteinium</span></li>
+             <li data-weight="252"><span class="bigfont1" aria-label="standard atomic weight ( 252 )">(252)</span></li>
+             <li data-groundstate="einsteinium"><span class="bigfont1" aria-label="ground [Rn]5f 11 7s2">[Rn]5f<sup>11</sup>7s<sup>2</sup><span></li>
+             <li data-ev="6.3676"><span class="bigfont1" aria-label="ionization energy 6 . 3 6  76">6.3676</span></li> 
+          </ul>
+      </td>
+      <td id="fermium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="100"><span class="bigfont1" aria-label="atomic number 100">100</span></li>
+             <li data-symbol="F m" aria-label="atomic symbol F m" class="bigfont2">F<span class="letter-tight">m</span></li>
+             <li data-element="fermium"><span class="bigfont1" aria-label="element">Fermium</span></li>
+             <li data-weight="257"><span class="bigfont1" aria-label="standard atomic weight ( 257 )">(257)</span></li>
+             <li data-groundstate="fermium"><span class="bigfont1" aria-label="ground [Rn]5f 12 7s2">[Rn]5f<sup>12</sup>7s<sup>2</sup><span></li>
+             <li data-ev="6.50"><span class="bigfont1" aria-label="ionization energy 6 . 5 0">6.50</span></li> 
+          </ul>
+      </td>
       <td id="mendelevium" class="artificial" tabindex="0">
             <ul>
              <li data-atomicnumber="101"><span class="bigfont1" aria-label="atomic number 101">101</span></li>
@@ -1224,7 +1242,7 @@
   <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
-        Content: 24 January 2020<br />
+        Content: 27 January 2020<br />
         WebAim: 2 December 2019 0<br />
         NuHTML: 2 December 2019 multiple aria-label warnings (expected, in this case)<br />
         Note:aria-label used to over-ride screen reader mispronunciations of atomic weights<br />
