--- a/index.html
+++ b/index.html
@@ -1180,8 +1180,17 @@
       <td>Row 9, Cell 9</td>
       <td>Row 9, Cell 10</td>
       <td>Row 9, Cell 11</td>
-      <td>Row 9, Cell 12</td>
-      <td id="Californium" class="artificial" tabindex="0">
+      <td id="berkelium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="97"><span class="bigfont1" aria-label="atomic number 97">97</span></li>
+             <li data-symbol="C f" aria-label="atomic symbol C f" class="bigfont2">C<span class="letter-tight">f</span></li>
+             <li data-element="berkelium"><span class="bigfont1" aria-label="element">Berkelium</span></li>
+             <li data-weight="247"><span class="bigfont1" aria-label="standard atomic weight ( 247 )">(247)</span></li>
+             <li data-groundstate="berkelium"><span class="bigfont1" aria-label="ground [Rn]5f 10 7s2">[Rn]5f<sup>10</sup>7s<sup>2</sup><span></li>
+             <li data-ev="6.2817"><span class="bigfont1" aria-label="ionization energy 6 . 2 8 1 7">6.2817</span></li> 
+          </ul>
+      </td>
+      <td id="californium" class="artificial" tabindex="0">
             <ul>
              <li data-atomicnumber="98"><span class="bigfont1" aria-label="atomic number 98">98</span></li>
              <li data-symbol="C f" aria-label="atomic symbol C f" class="bigfont2">C<span class="letter-tight">f</span></li>
