--- a/index.html
+++ b/index.html
@@ -1183,11 +1183,11 @@
       <td id="berkelium" class="artificial" tabindex="0">
             <ul>
              <li data-atomicnumber="97"><span class="bigfont1" aria-label="atomic number 97">97</span></li>
-             <li data-symbol="C f" aria-label="atomic symbol C f" class="bigfont2">C<span class="letter-tight">f</span></li>
+             <li data-symbol="B k" aria-label="atomic symbol B k" class="bigfont2">B<span class="letter-tight">k</span></li>
              <li data-element="berkelium"><span class="bigfont1" aria-label="element">Berkelium</span></li>
              <li data-weight="247"><span class="bigfont1" aria-label="standard atomic weight ( 247 )">(247)</span></li>
-             <li data-groundstate="berkelium"><span class="bigfont1" aria-label="ground [Rn]5f 10 7s2">[Rn]5f<sup>10</sup>7s<sup>2</sup><span></li>
-             <li data-ev="6.2817"><span class="bigfont1" aria-label="ionization energy 6 . 2 8 1 7">6.2817</span></li> 
+             <li data-groundstate="berkelium"><span class="bigfont1" aria-label="ground [Rn]5f 9 7s2">[Rn]5f<sup>9</sup>7s<sup>2</sup><span></li>
+             <li data-ev="6.1978"><span class="bigfont1" aria-label="ionization energy 6 . 1 9 7 8">6.1978</span></li> 
           </ul>
       </td>
       <td id="californium" class="artificial" tabindex="0">
