--- a/index_backup1.html
+++ b/index_backup1.html
@@ -1180,8 +1180,26 @@
       <td>Row 9, Cell 9</td>
       <td>Row 9, Cell 10</td>
       <td>Row 9, Cell 11</td>
-      <td>Row 9, Cell 12</td>
-      <td>Row 9, Cell 13</td>
+      <td id="berkelium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="97"><span class="bigfont1" aria-label="atomic number 97">97</span></li>
+             <li data-symbol="B k" aria-label="atomic symbol B k" class="bigfont2">B<span class="letter-tight">k</span></li>
+             <li data-element="berkelium"><span class="bigfont1" aria-label="element">Berkelium</span></li>
+             <li data-weight="247"><span class="bigfont1" aria-label="standard atomic weight ( 247 )">(247)</span></li>
+             <li data-groundstate="berkelium"><span class="bigfont1" aria-label="ground [Rn]5f 9 7s2">[Rn]5f<sup>9</sup>7s<sup>2</sup><span></li>
+             <li data-ev="6.1978"><span class="bigfont1" aria-label="ionization energy 6 . 1 9 7 8">6.1978</span></li> 
+          </ul>
+      </td>
+      <td id="californium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="98"><span class="bigfont1" aria-label="atomic number 98">98</span></li>
+             <li data-symbol="C f" aria-label="atomic symbol C f" class="bigfont2">C<span class="letter-tight">f</span></li>
+             <li data-element="californium"><span class="bigfont1" aria-label="element">Californium</span></li>
+             <li data-weight="251"><span class="bigfont1" aria-label="standard atomic weight ( 251 )">(251)</span></li>
+             <li data-groundstate="californium"><span class="bigfont1" aria-label="ground [Rn]5f 10 7s2">[Rn]5f<sup>10</sup>7s<sup>2</sup><span></li>
+             <li data-ev="6.2817"><span class="bigfont1" aria-label="ionization energy 6 . 2 8 1 7">6.2817</span></li> 
+          </ul>
+      </td>
       <td id="einsteinium" class="artificial" tabindex="0">
             <ul>
              <li data-atomicnumber="99"><span class="bigfont1" aria-label="atomic number 99">99</span></li>
@@ -1189,7 +1207,7 @@
              <li data-element="einsteinium"><span class="bigfont1" aria-label="element">Einsteinium</span></li>
              <li data-weight="252"><span class="bigfont1" aria-label="standard atomic weight ( 252 )">(252)</span></li>
              <li data-groundstate="einsteinium"><span class="bigfont1" aria-label="ground [Rn]5f 11 7s2">[Rn]5f<sup>11</sup>7s<sup>2</sup><span></li>
-             <li data-ev="6.3676"><span class="bigfont1" aria-label="ionization energy 6 . 3 6  76">6.3676</span></li> 
+             <li data-ev="6.3676"><span class="bigfont1" aria-label="ionization energy 6 . 3 6  7 6">6.3676</span></li> 
           </ul>
       </td>
       <td id="fermium" class="artificial" tabindex="0">
