--- a/index_backup2.html
+++ b/index_backup2.html
@@ -1179,9 +1179,27 @@
       <td>Row 9, Cell 8</td>
       <td>Row 9, Cell 9</td>
       <td>Row 9, Cell 10</td>
-      <td>Row 9, Cell 11</td>
-      <td>Row 9, Cell 12</td>
-      <td id="Californium" class="artificial" tabindex="0">
+      <td id="curium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="96"><span class="bigfont1" aria-label="atomic number 96">96</span></li>
+             <li data-symbol="C m" aria-label="atomic symbol C m" class="bigfont2">C<span class="letter-tight">m</span></li>
+             <li data-element="curium"><span class="bigfont1" aria-label="element">Curium</span></li>
+             <li data-weight="247"><span class="bigfont1" aria-label="standard atomic weight ( 247 )">(247)</span></li>
+             <li data-groundstate="curium"><span class="bigfont1" aria-label="ground [Rn]5f 7 6d 7s2">[Rn]5f<sup>7</sup>6d7s<sup>2</sup><span></li>
+             <li data-ev="5.9914"><span class="bigfont1" aria-label="ionization energy 5 . 9 9 1 4">5.9914</span></li> 
+          </ul>
+      </td>
+      <td id="berkelium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="97"><span class="bigfont1" aria-label="atomic number 97">97</span></li>
+             <li data-symbol="B k" aria-label="atomic symbol B k" class="bigfont2">B<span class="letter-tight">k</span></li>
+             <li data-element="berkelium"><span class="bigfont1" aria-label="element">Berkelium</span></li>
+             <li data-weight="247"><span class="bigfont1" aria-label="standard atomic weight ( 247 )">(247)</span></li>
+             <li data-groundstate="berkelium"><span class="bigfont1" aria-label="ground [Rn]5f 10 7s2">[Rn]5f<sup>10</sup>7s<sup>2</sup><span></li>
+             <li data-ev="6.1978"><span class="bigfont1" aria-label="ionization energy 6 . 1 9 7 8">6.1978</span></li> 
+          </ul>
+      </td>
+      <td id="californium" class="artificial" tabindex="0">
             <ul>
              <li data-atomicnumber="98"><span class="bigfont1" aria-label="atomic number 98">98</span></li>
              <li data-symbol="C f" aria-label="atomic symbol C f" class="bigfont2">C<span class="letter-tight">f</span></li>
@@ -1241,8 +1259,8 @@
              <li data-ev="4.96"><span class="bigfont1" aria-label="ionization energy 4 . 9 6">4.96</span></li> 
           </ul>
       </td>
-    </tr>
-    </tr>
+     </tr>
+
   </tbody>
 </table>
 </div>
