--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
              <li data-symbol="H f" aria-label="atomic symbol H f" class="bigfont2">H<span class="letter-tight">f</span></li>
              <li data-element="hafnium"><span class="bigfont1" aria-label="element">Hafnium</span></li>
              <li data-weight="178.49"><span class="bigfont1" aria-label="standard atomic weight  178 . 4 9">178.49</span></li>
-             <li data-groundstate="hafnium"><span class="bigfont1" aria-label="ground [Xe]4f145d2 6s2">[Xe]4f<sup>14</sup>5d<sup>2</sup> 6s<sup>2</sup><span></li>
+             <li data-groundstate="hafnium"><span class="bigfont1" aria-label="ground [Xe]4f145d2 6s2">[Xe]4f<sup>14</sup>5d<sup>2</sup> 6s<sup>2</sup></span></li>
              <li data-ev="6.8251"><span class="bigfont1" aria-label="ionization energy 6 . 8 2 5 1">6.8251</span></li> 
           </ul>
       </td>
@@ -705,7 +705,7 @@
              <li data-symbol="T a" aria-label="atomic symbol T a" class="bigfont2">T<span class="letter-tight">a</span></li>
              <li data-element="tantalum"><span class="bigfont1" aria-label="element">Tantalum</span></li>
              <li data-weight="180.95"><span class="bigfont1" aria-label="standard atomic weight  180 . 9 5">180.95</span></li>
-             <li data-groundstate="tantalum"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 3 6s2">[Xe]4f<sup>14</sup>5d<sup>3</sup>6s<sup>2</sup> <span> </li>
+             <li data-groundstate="tantalum"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 3 6s2">[Xe]4f<sup>14</sup>5d<sup>3</sup>6s<sup>2</sup></span></li>
              <li data-ev="7.5496"><span class="bigfont1" aria-label="ionization energy 7 . 5 4 9 6">7.5496</span></li> 
           </ul>
       </td>
@@ -715,7 +715,7 @@
              <li data-symbol="W" aria-label="atomic symbol W" class="bigfont2">W<span class="letter-tight">&nbsp;</span></li>
              <li data-element="tungsten"><span class="bigfont1" aria-label="element">Tungsten</span></li>
              <li data-weight="183.84"><span class="bigfont1" aria-label="standard atomic weight  183 . 8 4">183.84</span></li>
-             <li data-groundstate="tungsten"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 4 6s2">[Xe]4f<sup>14</sup>5d<sup>4</sup>6s<sup>2</sup><span></li>
+             <li data-groundstate="tungsten"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 4 6s2">[Xe]4f<sup>14</sup>5d<sup>4</sup>6s<sup>2</sup></span></li>
              <li data-ev="7.8640"><span class="bigfont1" aria-label="ionization energy 7 . 8 6 4 0">7.8640</span></li> 
           </ul>
       </td>
@@ -725,7 +725,7 @@
              <li data-symbol="R e" aria-label="atomic symbol R e" class="bigfont2">R<span class="letter-tight">e</span></li>
              <li data-element="rhenium"><span class="bigfont1" aria-label="element">Rhenium</span></li>
              <li data-weight="186.21"><span class="bigfont1" aria-label="standard atomic weight  186 . 2 1">186.21</span></li>
-             <li data-groundstate="rhenium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 5 6s2">[Xe]4f<sup>14</sup>5d<sup>5</sup>6s<sup>2</sup><span></li>
+             <li data-groundstate="rhenium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 5 6s2">[Xe]4f<sup>14</sup>5d<sup>5</sup>6s<sup>2</sup></span></li>
              <li data-ev="7.8335"><span class="bigfont1" aria-label="ionization energy 7 . 8 3 3 5">7.8335</span></li> 
           </ul>
       </td>
@@ -735,7 +735,7 @@
              <li data-symbol="O s" aria-label="atomic symbol O s" class="bigfont2">O<span class="letter-tight">s</span></li>
              <li data-element="osmium"><span class="bigfont1" aria-label="element">Osmium</span></li>
              <li data-weight="190.23"><span class="bigfont1" aria-label="standard atomic weight  190 . 2 3">190.23</span></li>
-             <li data-groundstate="osmium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 6 6s2">[Xe]4f<sup>14</sup>5d<sup>6</sup>6s<sup>2</sup><span></li>
+             <li data-groundstate="osmium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 6 6s2">[Xe]4f<sup>14</sup>5d<sup>6</sup>6s<sup>2</sup></span></li>
              <li data-ev="8.4382"><span class="bigfont1" aria-label="ionization energy 8 . 4 3 8 2">8.4382</span></li> 
           </ul>
       </td>
