--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
              <li data-symbol="I r" aria-label="atomic symbol I r" class="bigfont2">I<span class="letter-tight">r</span></li>
              <li data-element="iridium"><span class="bigfont1" aria-label="element">Iridium</span></li>
              <li data-weight="192.22"><span class="bigfont1" aria-label="standard atomic weight 192 . 2 2">192.22</span></li>
-             <li data-groundstate="iridium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 7 6s2">[Xe]4f<sup>14</sup>5d<sup>7</sup>6s<sup>2</sup><span></li>
+             <li data-groundstate="iridium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 7 6s2">[Xe]4f<sup>14</sup>5d<sup>7</sup>6s<sup>2</sup></span></li>
              <li data-ev="8.9670"><span class="bigfont1" aria-label="ionization energy 8 . 9 6 7 0">8.9670</span></li> 
           </ul>
       </td>
